- Methoden zu Klassen hinzugefügt - switches für LiteraturArt geschrieben - Funktionen von SQLDB angepasst und in Klassendiagramm ergänzt

--- a/trunk/docs/beleg1/funktionelle_anforderungen.tex
+++ b/trunk/docs/beleg1/funktionelle_anforderungen.tex
@@ -144,6 +144,7 @@ Autorennamen & \{Autorname\} \\
 Mitgliedsdaten & Name + Vorname + Login + Passwort + Rechte + E-Mail\\
 \hline
 Literaturdaten & Art + Titel + Autorennamen + (Jahr) + (Verlag) + (ISBN) + (Beschreibung) + (Ort) + (Stichworte) \\
+\hline
 LiteraturdatenID & Literatur\_Nr + Literaturdaten \\
 \hline
 Kommentardaten & Literatur\_Nr + Mitglieds\_Nr + Kommentartext \\
