--- a/trunk/docs/beleg2/klassenspezifikation.tex
+++ b/trunk/docs/beleg2/klassenspezifikation.tex
@@ -2,6 +2,7 @@
 \input{doxygen/classAutor}
 \input{doxygen/classKommentar}
 \input{doxygen/classLiteratur}
+\input{doxygen/classLiteraturArt}
 \input{doxygen/classLogin}
 \input{doxygen/classMitglied}
 \input{doxygen/classSuche}
