--- a/trunk/docs/beleg1/operationelle_anforderungen.tex
+++ b/trunk/docs/beleg1/operationelle_anforderungen.tex
@@ -69,6 +69,8 @@ Kommentardaten & Literatur\_Nr + Mitglieds\_Nr + Kommentartext & $4 + 4 + 4 = 12
 \hline
 BibTeX-Datei & *Datei im Bibtexformat* & $1024$\\
 \hline
+Suchanfrage & [Suchbegriff | Titel + Autor] & $40+40=80$\\
+\hline
 Suchbegriff & Zeichenkette100 & $100 $ \\
 \hline
 Exportanfrage & Literatur\_Nr & $4 $ \\
