Korrekter Name (Bibliothek) in operationelle Anforderungen

--- a/trunk/docs/beleg1/operationelle_anforderungen.tex
+++ b/trunk/docs/beleg1/operationelle_anforderungen.tex
@@ -106,7 +106,7 @@ Mitgliederliste & \{Mitglieds\_Nr + Name + Vorname\} & $4 + 20 + 20 = 44 $\\
 \hline
 Speicher & Struktur & Minimum & Mittel & Maximum \\
 \hline\hline
-Literatur & {Literatur} & $0*512$ & $50*512=25600$ & $100*512=51200$ \\
+Bibliothek & {Literatur} & $0*512$ & $50*512=25600$ & $100*512=51200$ \\
 \hline
 Kommentare & {Kommentar} & $0*412$ & $50*412=20600$ & $100*412=41200$ \\
 \hline
