Zeilenumbruch vor neuer Klassendokumentation

--- a/trunk/docs/beleg2/teilbeleg2.tex
+++ b/trunk/docs/beleg2/teilbeleg2.tex
@@ -12,6 +12,9 @@
 \usepackage{user} % eigene Befehle
 \usepackage{longtable}
 \usepackage{floatflt}
+\usepackage{titlesec}
+
+\newcommand{\subsectionbreak}{\clearpage}
 
 \ifpdf
   \usepackage[ps2pdf]{thumbpdf}
