- Autor und Änderungsstand hinzugefügt - Protokoll hinzugefügt - Fehlende Importe hinzugefügt

--- a/trunk/docs/beleg1/basismaschine_umgebung.tex
+++ b/trunk/docs/beleg1/basismaschine_umgebung.tex
@@ -5,7 +5,7 @@ F"ur {\bf Webserver} wird folgende Ausstattung ben"otigt:
 \begin{itemize}
  \item Server (Monitor wird nicht ben"otigt)
  \item Breitband-Netzwerk (z. B. SDSL, Ethernet)
- \item 5 MB Festplattenspeicher
+ \item 5 MB freien Festplattenspeicher
 \end{itemize}
 Als notwendige Minimalausstattung des für den {\bf Nutzer-PC} wird vorgeschlagen:
 \begin{itemize}
