--- a/trunk/docs/beleg2/klassenspezifikation.tex
+++ b/trunk/docs/beleg2/klassenspezifikation.tex
@@ -1,4 +1,7 @@
 \section{Klassenspezifikation}
+\subsection{Klassendiagramm}
+\includegraphics[scale=0.65]{LiMan_System}
+
 \input{doxygen/classAutor}
 \input{doxygen/classKommentar}
 \input{doxygen/classLiteratur}
