--- a/trunk/docs/beleg2/systemarchitektur.tex
+++ b/trunk/docs/beleg2/systemarchitektur.tex
@@ -1,2 +1,5 @@
 \section{Entwurf der Systemarchitektur} 
-\includegraphics[scale=0.65]{LiMan_System}
+\includegraphics[scale=0.56]{systemarchitektur}
+
+Aus Gründen der Übersichtlichkeit wurde die Login-Hilfsklasse entfernt. Eine komplette Übersicht über die Klassen inklusive der Login-Hilfsklasse ist im Klassendiagramm möglich.
+\clearpage
