- Programminterfaces in 3. Beleg eingefügt - Fehlende Verknüpfung zu BibTeX-Klasse aus 2. Beleg entfernt

--- a/trunk/docs/beleg3/programmdokumentation.tex
+++ b/trunk/docs/beleg3/programmdokumentation.tex
@@ -3,8 +3,30 @@
 \subsection{Klasse Autor}
 \lstinputlisting{interfaces/autor.php}
 
+\subsection{Klasse Kommentar}
+\lstinputlisting{interfaces/kommentar.php}
+
+\subsection{Klasse LiteraturArt}
+\lstinputlisting{interfaces/literaturart.php}
+
+\subsection{Klasse Literatur}
+\lstinputlisting{interfaces/literatur.php}
+
+\subsection{Klasse Login}
+\lstinputlisting{interfaces/login.php}
+
+\subsection{Klasse Mitglied}
+\lstinputlisting{interfaces/mitglied.php}
+
+\subsection{Klasse SQLDB}
+\lstinputlisting{interfaces/sqldb_mysql.php}
+
+\subsection{Klasse Suche}
+\lstinputlisting{interfaces/suche.php}
+
+
+
 \section{Kommentierte Quelltexte}
-%nur ein Test
 \subsection{include/autor.php}
 \lstinputlisting{sourcecodes/include/autor.php}
 
