- Interfaces und Quellcode zwischenzeitlich bei der Ausgabe entfernt - Testmatrix angefangen - Erste Tests beschrieben und eingetragen

--- a/trunk/docs/beleg3/programmdokumentation.tex
+++ b/trunk/docs/beleg3/programmdokumentation.tex
@@ -1,113 +1,6 @@
 \chapter{Programmdokumentation}
-% Klasseninterfaces
-\section{Definition Klasseninterfaces}
-\subsection{Klasse Autor}
-\lstinputlisting{interfaces/autor.php}
-
-\subsection{Klasse Kommentar}
-\lstinputlisting{interfaces/kommentar.php}
-
-\subsection{Klasse LiteraturArt}
-\lstinputlisting{interfaces/literaturart.php}
-
-\subsection{Klasse Literatur}
-\lstinputlisting{interfaces/literatur.php}
-
-\subsection{Klasse Login}
-\lstinputlisting{interfaces/login.php}
-
-\subsection{Klasse Mitglied}
-\lstinputlisting{interfaces/mitglied.php}
-
-\subsection{Klasse SQLDB}
-\lstinputlisting{interfaces/sqldb_mysql.php}
-
-\subsection{Klasse Suche}
-\lstinputlisting{interfaces/suche.php}
-
-% Quelltexte
-\section{Kommentierte Quelltexte}
-\subsection{bibtex.php}
-\lstinputlisting{sourcecodes/bibtex.php}
-
-\subsection{commentmod.php}
-\lstinputlisting{sourcecodes/commentmod.php}
-
-\subsection{index.php}
-\lstinputlisting{sourcecodes/index.php}
-
-\subsection{install.php}
-\lstinputlisting{sourcecodes/install.php}
-
-\subsection{litmod.php}
-\lstinputlisting{sourcecodes/litmod.php}
-
-\subsection{lit.php}
-\lstinputlisting{sourcecodes/lit.php}
-
-\subsection{login.php}
-\lstinputlisting{sourcecodes/login.php}
-
-\subsection{searchmore.php}
-\lstinputlisting{sourcecodes/searchmore.php}
-
-\subsection{search.php}
-\lstinputlisting{sourcecodes/search.php}
-
-\subsection{userlist.php}
-\lstinputlisting{sourcecodes/userlist.php}
-
-\subsection{usermod.php}
-\lstinputlisting{sourcecodes/usermod.php}
-
-\subsection{user.php}
-\lstinputlisting{sourcecodes/user.php}
-
-\subsection{design/liman.css}
-\lstinputlisting{sourcecodes/design/liman.css}
-
-\subsection{include/autor.php}
-\lstinputlisting{sourcecodes/include/autor.php}
-
-\subsection{include/config.php}
-\lstinputlisting{sourcecodes/include/config.php}
-
-\subsection{include/footer.php}
-\lstinputlisting{sourcecodes/include/footer.php}
-
-\subsection{include/form\_helper.php}
-\lstinputlisting{sourcecodes/include/form_helper.php}
-
-\subsection{include/global.php}
-\lstinputlisting{sourcecodes/include/global.php}
-
-\subsection{include/header.php}
-\lstinputlisting{sourcecodes/include/header.php}
-
-\subsection{include/kommentar.php}
-\lstinputlisting{sourcecodes/include/kommentar.php}
-
-\subsection{include/literaturart.php}
-\lstinputlisting{sourcecodes/include/literaturart.php}
-
-\subsection{include/literatur.php}
-\lstinputlisting{sourcecodes/include/literatur.php}
-
-\subsection{include/login.php}
-\lstinputlisting{sourcecodes/include/login.php}
-
-\subsection{include/mitglied.php}
-\lstinputlisting{sourcecodes/include/mitglied.php}
-
-\subsection{include/sqldb\_mysql.php}
-\lstinputlisting{sourcecodes/include/sqldb_mysql.php}
-
-\subsection{include/sqldb.php}
-\lstinputlisting{sourcecodes/include/sqldb.php}
-
-\subsection{include/suche.php}
-\lstinputlisting{sourcecodes/include/suche.php}
-
+% Während der Weiteren Arbeiten kurzzeitig deaktiviert
+%\input{interfaces_code}
 
 % Tests
-\input{tests.tex}
+\input{tests}
