--- a/trunk/docs/beleg3/user.sty
+++ b/trunk/docs/beleg3/user.sty
@@ -1,3 +1,6 @@
+\RequirePackage{array}
+\RequirePackage{rotating}
+
 % Nummer auch vor subsubsection anzeigen
 \setcounter{secnumdepth}{3}
 
@@ -25,3 +28,9 @@
     \fi
   \fi
 \fi
+
+% Rotierte Spaltenköpfe
+\newcolumntype{R}[1]{%
+  >{\begin{turn}{90}\begin{minipage}{#1}\footnotesize\raggedright\hspace{0pt}}l%
+  <{\end{minipage}\end{turn}}%
+}
