- Typo in search.php und tests.tex entfernt

--- a/trunk/docs/beleg3/tests.tex
+++ b/trunk/docs/beleg3/tests.tex
@@ -113,7 +113,7 @@ TODO
 \hline\hline
 \endhead
 1 &   &   &   &   &   &   & x & x & x & x &   & x & x &   &  \\\hline
-2 & x &   &   &   &   &   &   &   &   &   &   &   &   &   & x\\\hline
+2 & x &   &   &   &   &   &   &   &   &   &   &   &   & x & x\\\hline
 3 & x & x & x & x & x & x & x & x & x & x & x & x & x & x &  \\\hline
 4 & x & x & x & x & x & x & x & x & x & x & x & x & x & x &  \\\hline
 5 & x & x & x & x & x & x & x & x & x & x & x & x & x & x &  \\\hline
