--- a/trunk/docs/beleg3/systemhandbuch.tex
+++ b/trunk/docs/beleg3/systemhandbuch.tex
@@ -29,7 +29,7 @@ und der Administrator angelegt. Sie k"onnen ihre Einstellungen auch sp"ater noch
 include/config.php anpassen.
 
 "Uberpr"ufen sie Ihre Einstellungen mit einem Login auf http://ihr.server.de/liman/ .
-Wenn alles korrekt installiert wurde, sollten Sie abschliessend noch die Datei install.php 
+Wenn alles korrekt installiert wurde, sollten abschließend noch die Datei install.php 
 aus dem Webserver-Verzeichnis gel"oscht werden, damit niemand die Datenbankverbindungsdaten neu 
 setzen kann.
 
