--- a/trunk/docs/beleg3/tests.tex
+++ b/trunk/docs/beleg3/tests.tex
@@ -6,10 +6,10 @@ TODO: Fall 1 - Unittests
 \subsubsection{Fall 2: Installation}
 \begin{enumerate}
 \item Systemzustand vor dem Test:\\
-	1. Durchlauf: Alle Speicher sind nicht vorhanden, aber die Datenbank. 2. Durchlauf: Speicher sind vorhanden und mit zufälligen Werten gefüllt.
+	1. Durchlauf: Alle Speicher nicht vorhanden, aber die Datenbank. 2. Durchlauf: Speicher sind vorhanden und mit zufälligen Werten gefüllt.
 \item Eingabedaten:\\
 	install.php wird aufgerufen und die verlangten Daten eingegeben.
-\item Erwartete Ereignisse:\
+\item Erwartete Ereignisse:\\
 	Verbindung mit Datenbank wird erstellt, schon vorhandene Speicher gelöscht, Speicher neu angelegt und neuer Administrator angelegt
 \item Systemzustand nach Test:\\
 	Leere Speicher Autoren, Bibliothek, Kommentare und Literatur\_Autoren bestehen. Außerdem existiert Speicher Mitglieder mit einem Datensatz (Administrator Admin Istrator mit angegebenen Login und gehashtem Passwort)
@@ -18,10 +18,10 @@ TODO: Fall 1 - Unittests
 \subsubsection{Fall 3: Test des Nutzerinterfaces -- Administrator}
 \begin{enumerate}
 \item Systemzustand vor dem Test:\\
-	Alle Speicher sind bis auf Mitglieder leer. In Mitglieder ist nur der Datensatz des ersten Administrators.
+	Alle Speicher bis auf Mitglieder sind leer. In Mitglieder ist nur der Datensatz des ersten Administrators.
 \item Eingabedaten:\\
-	Begonnen wird der Test mit dem einloggen als Administrator. Alle Funktionen des Systems werden nacheinander aktiviert, ohne Eintragungen vorzunehmen. Beendet wird der Test mit dem Ausloggen.
-\item Erwartete Ereignisse:\
+	Begonnen wird der Test mit dem Anmelden als Administrator. Alle Funktionen des Systems werden nacheinander aktiviert, ohne Eintragungen vorzunehmen. Beendet wird der Test mit dem Abmelden.
+\item Erwartete Ereignisse:\\
 	Korrekte Anzeige der entsprechend der aktivierten Aktion laut Layoutentwurf zugeordneten Ansicht.
 \item Systemzustand nach Test:\\
 	Unverändert, wie vor dem Test.
@@ -30,10 +30,10 @@ TODO: Fall 1 - Unittests
 \subsubsection{Fall 4: Test des Nutzerinterfaces -- Benutzer}
 \begin{enumerate}
 \item Systemzustand vor dem Test:\\
-	Alle Speicher sind bis auf Mitglieder leer. In Mitglieder ist neben dem Datensatz des ersten Administrators ein Mitglied ohne Administratorrechte vorhanden.
+	Alle Speicher bis auf Mitglieder sind leer. In Mitglieder ist neben dem Datensatz des ersten Administrators ein Mitglied ohne Administratorrechte vorhanden.
 \item Eingabedaten:\\
-	Begonnen wird der Test mit dem einloggen als Mitglied. Alle Funktionen des Systems werden nacheinander aktiviert, ohne Eintragungen vorzunehmen. Beendet wird der Test mit dem Ausloggen.
-\item Erwartete Ereignisse:\
+	Begonnen wird der Test mit dem Anmelden als Mitglied. Alle Funktionen des Systems werden nacheinander aktiviert, ohne Eintragungen vorzunehmen. Beendet wird der Test mit dem Abmelden.
+\item Erwartete Ereignisse:\\
 	Korrekte Anzeige der entsprechend der aktivierten Aktion laut Layoutentwurf zugeordneten Ansicht. Die Nutzerliste zeigt nur den eigenen Nutzereintrag an. Jegliche Provokation des Systems (Löschen und Hinzufügen eines Mitglieds und das Bearbeiten eines fremden Mitglieds) wird abgewiesen bzw. auf die eigenen Nutzerdaten umgeleitet.
 \item Systemzustand nach Test:\\
 	Unverändert, wie vor dem Test.
@@ -42,50 +42,218 @@ TODO: Fall 1 - Unittests
 \subsubsection{Fall 5: Test des Nutzerinterfaces -- Gast}
 \begin{enumerate}
 \item Systemzustand vor dem Test:\\
-	Alle Speicher sind bis auf Mitglieder leer. In Mitglieder ist nur der Datensatz des ersten Administrators.
+	Alle Speicher bis auf Mitglieder sind leer. In Mitglieder ist nur der Datensatz des ersten Administrators.
 \item Eingabedaten:\\
 	Nutzer ist nicht angemeldet. Alle Funktionen des Systems werden nacheinander aktiviert, ohne Eintragungen vorzunehmen.
-\item Erwartete Ereignisse:\
+\item Erwartete Ereignisse:\\
 	Korrekte Anzeige der entsprechend der aktivierten Aktion laut Layoutentwurf zugeordneten Ansicht. Es sind keine Elemente zum Hinzufügen, Ändern oder Löschen von Daten vorhanden. Die Nutzerliste zeigt keinen Nutzereintrag an. Jegliche Provokation des Systems (Löschen und Hinzufügen, Ändern eines Mitglieds, Kommentars, Literatur) wird abgewiesen.
 \item Systemzustand nach Test:\\
 	Unverändert, wie vor dem Test.
 \end{enumerate}
 
 \subsubsection{Fall 6: Anlegen neue Literatur}
-TODO
+\begin{enumerate}
+\item Systemzustand vor dem Test:\\
+	Alle Speicher bis auf Mitglieder sind leer. In Mitglieder ist neben dem Datensatz des ersten Administrators ein Mitglied ohne Administratorrechte vorhanden.
+\item Eingabedaten:\\
+	Begonnen wird der Test mit dem Anmelden als Mitglied. Neue Literatur wird angelegt. Beendet wird der Test mit dem Abmelden.
+\item Erwartete Ereignisse:\\
+	System legt neue Literatur an und gibt Erfolgsmeldung aus.
+\item Systemzustand nach Test:\\
+	Alle Speicher bis auf Bibliothek sind unverändert. In Bibliothek existiert ein korrekter Datensatz.
+\end{enumerate}
 
-\subsubsection{Fall 7: Ändern Literatur}
-TODO
+\subsubsection{Fall 7: Anlegen neue Literatur, die schon existiert}
+\begin{enumerate}
+\item Systemzustand vor dem Test:\\
+	Alle Speicher bis auf Mitglieder und Bibliothek sind leer. In Mitglieder ist neben dem Datensatz des ersten Administrators ein Mitglied ohne Administratorrechte vorhanden. In Bibliothek sind mehrere Literaturdatensätze vorhanden.
+\item Eingabedaten:\\
+	Begonnen wird der Test mit dem Anmelden als Mitglied. Neue Literatur wird angelegt mit ähnlichen/gleichen Daten wie eine existierende Literatur angelegt. Anlegen wird bestätigt. Beendet wird der Test mit dem Abmelden.
+\item Erwartete Ereignisse:\\
+	System fragt ob die Literatur angelegt werden soll und zeigt Liste der ähnlichen Literatur an. Nach Bestätigung legt das System neue Literatur an und gibt Erfolgsmeldung aus.
+\item Systemzustand nach Test:\\
+	Alle Speicher bis auf Bibliothek, Literatur\_Autoren und Autoren sind unverändert. In Bibliothek existiert ein neuer korrekter Datensatz, in Autoren sind angegebene Autoren eingefügt und in Literatur\_Autoren sind die Verbindung von Literatur zu Autoren vorhanden.
+\end{enumerate}
 
-\subsubsection{Fall 8: Löschen Literatur}
-TODO
+\subsubsection{Fall 8: Ändern Literatur}
+\begin{enumerate}
+\item Systemzustand vor dem Test:\\
+	Kommentare ist leer. In Mitglieder ist neben dem Datensatz des ersten Administrators ein Mitglied ohne Administratorrechte vorhanden. In Bibliothek sind mehrere Literaturdatensätze vorhanden. In Autoren sind Autoren vohanden und in Literatur\_Autoren sind die Verbindungen zu Literatur vorhanden.
+\item Eingabedaten:\\
+	Begonnen wird der Test mit dem Anmelden als Mitglied. Bestehende Literatur wird gewählt und bearbeitet. Beendet wird der Test mit dem Abmelden.
+\item Erwartete Ereignisse:\\
+	System ändert Literatur und gibt Erfolgsmeldung aus.
+\item Systemzustand nach Test:\\
+	Alle Speicher bis auf Bibliothek, Literatur\_Autoren und Autoren sind unverändert. In Bibliothek existiert die selbe Anzahl an Datensätzen und der zu ändernte Datensatz wurde korrekt überschrieben. In Autoren sind angegebene Autoren eingefügt, nicht angegebene entfernt und in Literatur\_Autoren sind die Verbindung von Literatur zu Autoren vorhanden.
+\end{enumerate}
 
-\subsubsection{Fall 9: Anlegen neues Mitglied}
-TODO
+\subsubsection{Fall 9: Löschen Literatur}
+\begin{enumerate}
+\item Systemzustand vor dem Test:\\
+	Kommentare ist leer. In Mitglieder ist neben dem Datensatz des ersten Administrators ein Mitglied ohne Administratorrechte vorhanden. In Bibliothek sind mehrere Literaturdatensätze vorhanden. In Autoren sind Autoren vohanden und in Literatur\_Autoren sind die Verbindungen zu Literatur vorhanden.
+\item Eingabedaten:\\
+	Begonnen wird der Test mit dem Anmelden als Mitglied. Bestehende Literatur wird gewählt und entfernt. Beendet wird der Test mit dem Abmelden.
+\item Erwartete Ereignisse:\\
+	System fragt nach Bestätigung und ändert nach Bestätigung Literatur und gibt Erfolgsmeldung aus.
+\item Systemzustand nach Test:\\
+	Alle Speicher bis auf Bibliothek, Literatur\_Autoren und Autoren sind unverändert. In Bibliothek existieren alle Datensätze, bis auf den zu löschenden Datensatz. In Autoren sind nicht mehr benutzte Autoren entfernt und in Literatur\_Autoren sind die nicht mehr benötigten Verbindungen von Literatur zu Autoren entfernt.
+\end{enumerate}
 
-\subsubsection{Fall 10: Ändern Mitglied}
-TODO
+\subsubsection{Fall 10: Anlegen neues Mitglied}
+\begin{enumerate}
+\item Systemzustand vor dem Test:\\
+	Alle Speicher bis auf Mitglieder sind leer. In Mitglieder ist nur der Datensatz des ersten Administrators.
+\item Eingabedaten:\\
+	Begonnen wird der Test mit dem Anmelden als Administrator. Neues Mitglied wird angelegt. Beendet wird der Test mit dem Abmelden.
+\item Erwartete Ereignisse:\\
+	System legt neues Mitglied an und gibt Erfolgsmeldung aus.
+\item Systemzustand nach Test:\\
+	Alle Speicher bis auf Mitglieder sind unverändert. In Mitglieder existiert neben dem Administratordatensatz ein korrekter neuer Datensatz.
+\end{enumerate}
 
-\subsubsection{Fall 11: Löschen Mitglied}
-TODO
+\subsubsection{Fall 11: Anlegen neues Mitglied, das schon existiert}
+\begin{enumerate}
+\item Systemzustand vor dem Test:\\
+	Alle Speicher bis auf Mitglieder sind leer. In Mitglieder ist nur der Datensatz des ersten Administrators.
+\item Eingabedaten:\\
+	Begonnen wird der Test mit dem Anmelden als Administrator. Neues Mitglied wird mit dem Login des Administratos angelegt. Beendet wird der Test mit dem Abmelden.
+\item Erwartete Ereignisse:\\
+	System gibt Fehlermeldung aus.
+\item Systemzustand nach Test:\\
+	Alle Speicher sind unverändert.
+\end{enumerate}
 
-\subsubsection{Fall 12: Anlegen Kommentar}
-TODO
+\subsubsection{Fall 12: Ändern Mitglied}
+\begin{enumerate}
+\item Systemzustand vor dem Test:\\
+	Alle Speicher bis auf Mitglieder sind leer. In Mitglieder ist neben dem Datensatz des ersten Administrators ein weiteres Mitglied vorhanden.
+\item Eingabedaten:\\
+	Begonnen wird der Test mit dem Anmelden als Administrator. Mitglied wird ausgewählt und bearbeitet. Beendet wird der Test mit dem Abmelden.
+\item Erwartete Ereignisse:\\
+	System ändert das Mitglied und gibt Erfolgsmeldung aus.
+\item Systemzustand nach Test:\\
+	Alle Speicher sind bis auf Mitglieder unverändert. In Mitglieder existiert die selbe Anzahl an Datensätzen und der zu ändernte Datensatz wurde korrekt überschrieben.
+\end{enumerate}
 
-\subsubsection{Fall 13: Ändern Kommentar}
-TODO
+\subsubsection{Fall 13: Ändern Mitglied - eigene Daten}
+\begin{enumerate}
+\item Systemzustand vor dem Test:\\
+	Alle Speicher bis auf Mitglieder sind leer. In Mitglieder ist neben dem Datensatz des ersten Administrators ein weiteres Mitglied ohne Administratorrechte vorhanden.
+\item Eingabedaten:\\
+	Begonnen wird der Test mit dem Anmelden als Mitglied. Eigene Mitgliedsdaten werden ausgewählt und bearbeitet. Beendet wird der Test mit dem Abmelden.
+\item Erwartete Ereignisse:\\
+	System ändert das Mitglied und gibt Erfolgsmeldung aus.
+\item Systemzustand nach Test:\\
+	Alle Speicher sind bis auf Mitglieder unverändert. In Mitglieder existiert die selbe Anzahl an Datensätzen und der zu eigene Datensatz wurde korrekt überschrieben.
+\end{enumerate}
 
-\subsubsection{Fall 14: Löschen Kommentar}
-TODO
+\subsubsection{Fall 14: Löschen Mitglied}
+\begin{enumerate}
+\item Systemzustand vor dem Test:\\
+	Alle Speicher bis auf Mitglieder sind leer. In Mitglieder ist neben dem Datensatz des ersten Administrators ein weiteres Mitglied vorhanden.
+\item Eingabedaten:\\
+	Begonnen wird der Test mit dem Anmelden als Administrator. Mitglied wird ausgewählt und entfernt. Beendet wird der Test mit dem Abmelden.
+\item Erwartete Ereignisse:\\
+	System löscht das Mitglied und gibt Erfolgsmeldung aus.
+\item Systemzustand nach Test:\\
+	Alle Speicher sind bis auf Mitglieder unverändert. In Mitglieder existieren alle Datensätze, bis auf den zu löschenden Datensatz.
+\end{enumerate}
 
-\subsubsection{Fall 15: Löschen Kommentar -- Administrator}
-TODO
+\subsubsection{Fall 15: Anlegen Kommentar}
+\begin{enumerate}
+\item Systemzustand vor dem Test:\\
+	Kommentare ist leer. In Mitglieder ist neben dem Datensatz des ersten Administrators ein Mitglied ohne Administratorrechte vorhanden. In Bibliothek ist Literaturdatensatz vorhanden. In Autoren sind Autoren vohanden und in Literatur\_Autoren sind die Verbindungen zu Literatur vorhanden.
+\item Eingabedaten:\\
+	Begonnen wird der Test mit dem Anmelden als Mitglied. Literatur wird ausgewählt. Neuer Kommentar wird angelegt. Beendet wird der Test mit dem Abmelden.
+\item Erwartete Ereignisse:\\
+	System legt neuen Kommentar an und gibt Erfolgsmeldung aus.
+\item Systemzustand nach Test:\\
+	Alle Speicher bis auf Kommentare sind unverändert. In Kommentare existiert ein neuer korrekter Datensatz.
+\end{enumerate}
 
-\subsubsection{Fall 16: Volltextsuche}
-TODO
+\subsubsection{Fall 16: Ändern Kommentar}
+\begin{enumerate}
+\item Systemzustand vor dem Test:\\
+	In Mitglieder ist neben dem Datensatz des ersten Administrators ein Mitglied ohne Administratorrechte vorhanden. In Bibliothek ist Literaturdatensatz vorhanden. In Autoren sind Autoren vohanden und in Literatur\_Autoren sind die Verbindungen zu Literatur vorhanden. In Kommentare ist Kommentar zu Literatureintrag vorhanden.
+\item Eingabedaten:\\
+	Begonnen wird der Test mit dem Anmelden als Mitglied. Literatur wird ausgewählt. Kommentar wird geändert. Beendet wird der Test mit dem Abmelden.
+\item Erwartete Ereignisse:\\
+	System ändert Kommentar und gibt Erfolgsmeldung aus.
+\item Systemzustand nach Test:\\
+	Alle Speicher bis auf Kommentare sind unverändert. In Kommentare wurde nur der Kommentar korrekt geändert.
+\end{enumerate}
 
-\subsubsection{Fall 17: Erweiterte Suche}
-TODO
+\subsubsection{Fall 17: Löschen Kommentar}
+\begin{enumerate}
+\item Systemzustand vor dem Test:\\
+	In Mitglieder ist neben dem Datensatz des ersten Administrators ein Mitglied ohne Administratorrechte vorhanden. In Bibliothek ist Literaturdatensatz vorhanden. In Autoren sind Autoren vohanden und in Literatur\_Autoren sind die Verbindungen zu Literatur vorhanden. In Kommentare sind mehrere Kommentare zu Literatureintrag vorhanden.
+\item Eingabedaten:\\
+	Begonnen wird der Test mit dem Anmelden als Mitglied. Literatur wird ausgewählt. Kommentar wird entfernt. Beendet wird der Test mit dem Abmelden.
+\item Erwartete Ereignisse:\\
+	System löscht Kommentar und gibt Erfolgsmeldung aus.
+\item Systemzustand nach Test:\\
+	Alle Speicher sind bis auf Kommentare unverändert. In Kommentare existieren alle Datensätze, bis auf den zu löschenden Datensatz.
+\end{enumerate}
+
+\subsubsection{Fall 18: Löschen fremden Kommentar}
+\begin{enumerate}
+\item Systemzustand vor dem Test:\\
+	In Mitglieder ist neben dem Datensatz des ersten Administrators ein Mitglied ohne Administratorrechte vorhanden. In Bibliothek ist Literaturdatensatz vorhanden. In Autoren sind Autoren vohanden und in Literatur\_Autoren sind die Verbindungen zu Literatur vorhanden. In Kommentare sind mehrere Kommentare zu Literatureintrag vorhanden.
+\item Eingabedaten:\\
+	Begonnen wird der Test mit dem Anmelden als Administrator. Literatur wird ausgewählt. Kommentar eines anderen Mitglieds wird entfernt. Beendet wird der Test mit dem Abmelden.
+\item Erwartete Ereignisse:\\
+	System löscht Kommentar und gibt Erfolgsmeldung aus.
+\item Systemzustand nach Test:\\
+	Alle Speicher sind bis auf Kommentare unverändert. In Kommentare existieren alle Datensätze, bis auf den zu löschenden Datensatz.
+\end{enumerate}
+
+\subsubsection{Fall 19: Löschen Literatur inklusive Kommentare}
+\begin{enumerate}
+\item Systemzustand vor dem Test:\\
+	In Mitglieder ist neben dem Datensatz des ersten Administrators ein Mitglied ohne Administratorrechte vorhanden. In Bibliothek ist Literaturdatensatz vorhanden. In Autoren sind Autoren vohanden und in Literatur\_Autoren sind die Verbindungen zu Literatur vorhanden. In Kommentare sind mehrere Kommentare zu Literatureintrag vorhanden.
+\item Eingabedaten:\\
+	Begonnen wird der Test mit dem Anmelden als Administrator. Literatur wird ausgewählt und entfernt. Beendet wird der Test mit dem Abmelden.
+\item Erwartete Ereignisse:\\
+	System löscht Literatur und dazugehörigen Kommentar und gibt Erfolgsmeldung aus.
+\item Systemzustand nach Test:\\
+	Speicher Mitglieder unverändert. In Kommentare existieren alle Datensätze, bis auf die zu der Literatur gehörenden Datensätze. Literaturdatensatz wurde aus Bibliothek entfernt. Nicht mehr benötigte Autoren aus Autoren entfernt und nicht mehr benötigte Verbindungen in Literatur\_Autoren entfernt.
+\end{enumerate}
+
+\subsubsection{Fall 20: Löschen Mitglied inklusive Kommentare}
+\begin{enumerate}
+\item Systemzustand vor dem Test:\\
+	In Mitglieder ist neben dem Datensatz des ersten Administrators ein Mitglied ohne Administratorrechte vorhanden. In Bibliothek ist Literaturdatensatz vorhanden. In Autoren sind Autoren vohanden und in Literatur\_Autoren sind die Verbindungen zu Literatur vorhanden. In Kommentare sind mehrere Kommentare zu Literatureintrag vorhanden.
+\item Eingabedaten:\\
+	Begonnen wird der Test mit dem Anmelden als Administrator. Mitglied wird ausgewählt und entfernt. Beendet wird der Test mit dem Abmelden.
+\item Erwartete Ereignisse:\\
+	System löscht Mitglied und dazugehörigen Kommentar und gibt Erfolgsmeldung aus.
+\item Systemzustand nach Test:\\
+	Speicher Literatur, Autoren, Literatur\_Autoren unverändert. In Kommentare existieren alle Datensätze, bis auf die zu dem Mitglied gehörenden Datensätze.
+\end{enumerate}
+
+\subsubsection{Fall 21: Volltextsuche}
+\begin{enumerate}
+\item Systemzustand vor dem Test:\\
+	Alle Speicher bis auf Mitglieder und Bibliothek sind leer. In Mitglieder ist nur der Datensatz des ersten Administrators. In Bibliothek sind mehrere Literaturdatensätze vorhanden.
+\item Eingabedaten:\\
+	Suchbegriff wird eingegeben
+\item Erwartete Ereignisse:\\
+	System sucht über Volltextsuche Literatur heraus und gibt diese mit Autoren aus
+\item Systemzustand nach Test:\\
+	Alle Speicher unverändert wie vor dem Test
+\end{enumerate}
+
+\subsubsection{Fall 22: Erweiterte Suche}
+\begin{enumerate}
+\item Systemzustand vor dem Test:\\
+	Alle Speicher bis auf Mitglieder und Bibliothek sind leer. In Mitglieder ist nur der Datensatz des ersten Administrators. In Bibliothek sind mehrere Literaturdatensätze vorhanden.
+\item Eingabedaten:\\
+	Suchbegriff wird eingegeben
+\item Erwartete Ereignisse:\\
+	System sucht über Autor und Titel Literatur heraus und gibt diese mit Autoren aus
+\item Systemzustand nach Test:\\
+	Alle Speicher unverändert wie vor dem Test
+\end{enumerate}
 
 \subsection{Testmatrix}
 \begin{longtable}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
@@ -112,11 +280,28 @@ TODO
 	\multicolumn{1}{R{6em}|}{Installation}\\
 \hline\hline
 \endhead
-1 &   &   &   &   &   &   & x & x & x & x &   & x & x &   &  \\\hline
-2 & x &   &   &   &   &   &   &   &   &   &   &   &   & x & x\\\hline
-3 & x & x & x & x & x & x & x & x & x & x & x & x & x & x &  \\\hline
-4 & x & x & x & x & x & x & x & x & x & x & x & x & x & x &  \\\hline
-5 & x & x & x & x & x & x & x & x & x & x & x & x & x & x &  \\\hline
+ 1 &   &   &   &   &   &   & x & x & x & x &   & x & x &   &  \\\hline
+ 2 & x &   &   &   &   &   &   &   &   &   &   &   &   & x & x\\\hline
+ 3 & x & x & x & x & x & x & x & x & x & x & x & x & x & x &  \\\hline
+ 4 & x & x & x & x & x & x & x & x & x & x & x & x & x & x &  \\\hline
+ 5 & x & x & x & x & x & x & x & x & x & x & x & x & x & x &  \\\hline
+ 6 & x & x &   & x &   & x & x &   & x & x & x &   & x & x &  \\\hline
+ 7 & x & x &   & x &   &   & x &   & x & x & x &   & x & x &  \\\hline
+ 8 & x & x &   & x &   &   & x &   & x & x & x &   &   & x &  \\\hline
+ 9 & x & x &   & x &   &   & x &   & x & x & x &   &   & x &  \\\hline
+10 & x &   &   &   & x &   &   &   &   &   & x & x &   & x &  \\\hline
+11 & x &   &   &   & x &   &   &   &   &   & x & x &   & x &  \\\hline
+12 & x &   &   &   & x &   &   &   &   &   & x & x &   & x &  \\\hline
+13 & x &   &   &   & x &   &   &   &   &   & x & x &   & x &  \\\hline
+14 & x &   &   &   & x &   &   &   &   &   & x & x &   & x &  \\\hline
+15 & x &   & x & x &   &   &   & x &   &   & x &   &   & x &  \\\hline
+16 & x &   & x & x &   &   &   & x &   &   & x &   &   & x &  \\\hline
+17 & x &   & x & x &   &   &   & x &   &   & x &   &   & x &  \\\hline
+18 & x &   & x & x &   &   &   & x &   &   & x &   &   & x &  \\\hline
+19 & x & x &   &   &   &   & x &   & x & x &   &   &   & x &  \\\hline
+20 & x &   &   &   & x &   &   & x &   &   &   & x &   & x &  \\\hline
+21 & x &   &   &   &   & x & x &   &   & x &   &   & x & x &  \\\hline
+22 & x &   &   &   &   & x & x &   &   & x &   &   & x & x &  \\\hline
 \end{longtable}
 
 \section{Systemtest}
