- Tests korrigiert (Kommentar, Mitglied) - Literatur aus test.php entfernt - Literatur aus Unittestzeile der Testmatrix entfernt - Dateigrößen in Programm-Filesystem korrigiert - In Programm-Filesystem Backslashes in Slashes geändert

--- a/trunk/docs/beleg3/tests.tex
+++ b/trunk/docs/beleg3/tests.tex
@@ -280,7 +280,7 @@ TODO: Fall 1 - Unittests
 	\multicolumn{1}{R{6em}|}{Installation}\\
 \hline\hline
 \endhead
- 1 &   &   &   &   &   &   & x & x & x & x &   & x & x &   &  \\\hline
+ 1 &   &   &   &   &   &   & x & x &   & x &   & x & x &   &  \\\hline
  2 & x &   &   &   &   &   &   &   &   &   &   &   &   & x & x\\\hline
  3 & x & x & x & x & x & x & x & x & x & x & x & x & x & x &  \\\hline
  4 & x & x & x & x & x & x & x & x & x & x & x & x & x & x &  \\\hline
