--- a/trunk/docs/beleg3/systemhandbuch.tex
+++ b/trunk/docs/beleg3/systemhandbuch.tex
@@ -29,69 +29,68 @@ und der Administrator angelegt. Sie k"onnen ihre Einstellungen auch sp"ater noch
 include/config.php anpassen.
 
 "Uberpr"ufen sie Ihre Einstellungen mit einem Login auf http://ihr.server.de/liman/ .
-Wenn alles korrekt installiert wurde, sollten abschlieﬂend noch die Datei install.php 
+Wenn alles korrekt installiert wurde, sollten abschlie"send noch die Datei install.php 
 aus dem Webserver-Verzeichnis gel"oscht werden, damit niemand die Datenbankverbindungsdaten neu 
 setzen kann.
 
 \section{Programm-Filesystem}
 {TODO}
-\begin{longtable}{|l|p{6.0cm}|p{2cm}|}
+\begin{longtable}{|l|p{6cm}|r|}
 \hline
 {\bf Bezeichnung der Datei} & {\bf Bedeutung} & {\bf Anzahl Bytes}\\
 \hline
 \endhead
 
-index.php & Startseite mit Letzte Literatur & 1196\\
+index.php & Startseite mit Letzte Literatur & 1364\\
 \hline
-login.php & login/logout mit Begr"u"sungstext & 836\\
+login.php & login/logout mit Begr"u"sungstext & 1384\\
 \hline
-user.php & Nutzerdetails & 1680\\
+user.php & Nutzerdetails & 1983\\
 \hline
-usermode.php & Nutzer l"oschen/"andern/hinzuf"ugen & 7892\\
+usermod.php & Nutzer l"oschen/"andern/hinzuf"ugen & 9534\\
 \hline
-userlist.php & Nutzerdaten anzeigen & 1924\\
+userlist.php & Nutzerdaten anzeigen & 2251\\
 \hline
-search.php & Suche (Ergebnisse) & 1893\\
+search.php & Suche (Ergebnisse) & 2245\\
 \hline
-searchmore.php & Suche (Formular) & 1284\\
+searchmore.php & Suche (Formular) & 1257\\
 \hline
-litmod.php & Literatur l"oschen / "andern / hinzuf"ugen & 10056\\
+litmod.php & Literatur l"oschen / "andern / hinzuf"ugen & 11701\\
 \hline
-commentmod.php & Kommentar l"oschen / "andern / hinzuf"ugen & 3089\\
+commentmod.php & Kommentar l"oschen / "andern / hinzuf"ugen & 4009\\
 \hline
-lit.php & Literaturdetails & 4436\\
+lit.php & Literaturdetails & 4771\\
 \hline
-bibtex.php & BibTeX Importieren & 2318\\
+bibtex.php & BibTeX Importieren & 2856\\
 \hline
-include$\backslash$config.php & Datenbankkonfiguration & 362\\
+include/config.php & Datenbankkonfiguration & 362\\
 \hline
-include$\backslash$global.php & Einrichtung Prog. - Umgebung & 1557\\
+include/global.php & Einrichtung Prog. - Umgebung & 1375\\
 \hline
-include$\backslash$literatur.php & Stellt Funktionen f"ur Literatur in Bibliothek zur Verf"ugung & 11846\\
+include/literatur.php & Stellt Funktionen f"ur Literatur in Bibliothek zur Verf"ugung & 13372\\
 \hline
-include$\backslash$mitglied.php & Stellt Funktionen f"ur Mitglieder bereit & 8436\\
+include/mitglied.php & Stellt Funktionen f"ur Mitglieder bereit & 9370\\
 \hline
-include$\backslash$suche.php & Durchsucht die Tabelle Bibliothek und Autoren "uber Volltextsuche & 7852\\
+include/suche.php & Durchsucht die Tabelle Bibliothek und Autoren "uber Volltextsuche & 8463\\
 \hline
-include$\backslash$footer.php & Ende jeder Html - Datei & 36 \\
+include/footer.php & Ende jeder HTML-Datei & 36 \\
 \hline
-include$\backslash$header.php & Kopf jeder Html-Datei & 2885 \\
+include/header.php & Kopf jeder HTML-Datei & 3236 \\
 \hline
-include$\backslash$literaturart.php & Speicherung aus der Datenbank oder BibTeX-Datei erhaltenen Art von Informationen & 3811\\
+include/literaturart.php & Speicherung aus der Datenbank oder BibTeX-Datei erhaltenen Art von Informationen & 3959\\
 \hline
-include$\backslash$sqldb.php & Datenbankzugriffsauswahl & 354 \\
+include/sqldb.php & Datenbankzugriffsauswahl & 481 \\
 \hline
-include$\backslash$autor.php & Stellt Funktionen f"ur Autoren bereit & 4608\\
+include/autor.php & Stellt Funktionen f"ur Autoren bereit & 5495\\
 \hline
-include$\backslash$formhelper.php & Hilfsfunktionen f"ur Formulare & 2278\\
+include/formhelper.php & Hilfsfunktionen f"ur Formulare & 2278\\
 \hline
-include$\backslash$kommentar.php & Stellt Funktionen f"ur Kommentare bereit & 7911\\
+include/kommentar.php & Stellt Funktionen f"ur Kommentare bereit & 9342\\
 \hline   
-include$\backslash$login.php &  Verwaltet die Session des Users und der damit entstehenden Rechte & 5243\\
+include/login.php &  Verwaltet die Session des Users und der damit entstehenden Rechte & 5414\\
 \hline
-include$\backslash$sqldbmysql.php & Startet eine Verbindung zum Datenbanksystem her und w"ahlt eine Datenbank & 6323\\
+include/sqldb\_mysql.php & Startet eine Verbindung zum Datenbanksystem her und w"ahlt eine Datenbank & 7212\\
 \hline
-
 \end{longtable}
 
 
