Dummheitsfehler beseitigt (falsche Vergleiche, falsche Membernamen, etc.)

--- a/trunk/docs/beleg3/tests.tex
+++ b/trunk/docs/beleg3/tests.tex
@@ -1,7 +1,17 @@
 \section{Testplan}
 \subsection{Testfälle}
 
-TODO: Fall 1 - Unittests
+\subsubsection{Fall 1: Unit Tests}
+\begin{enumerate}
+\item Systemzustand vor dem Test:\\
+	TODO: Hübsche Formulierung für: egal, wird nicht benutzt
+\item Eingabedaten:\\
+	test.php wird aufgerufen. Sonstige Eingaben werden fest im Code der Tests durchgeführt.
+\item Erwartete Ereignisse:\\
+	Alle Tests liefern "OK" zurück
+\item Systemzustand nach Test:\\
+	Unverändert, wie vor dem Test.
+\end{enumerate}
 
 \subsubsection{Fall 2: Installation}
 \begin{enumerate}
