- Fehlendes "design/liman.css" zu Dateiliste hinzugefügt - Makefile entfernt svn-Dateien und CSS des Unittests

--- a/trunk/docs/beleg3/systemhandbuch.tex
+++ b/trunk/docs/beleg3/systemhandbuch.tex
@@ -38,7 +38,7 @@ setzen kann.
 \begin{longtable}{|l|p{6cm}|r|}
 \hline
 {\bf Bezeichnung der Datei} & {\bf Bedeutung} & {\bf Anzahl Bytes}\\
-\hline
+\hline\hline
 \endhead
 
 index.php & Startseite mit Letzte Literatur & 1364\\
@@ -62,6 +62,8 @@ commentmod.php & Kommentar l"oschen / "andern / hinzuf"ugen & 4009\\
 lit.php & Literaturdetails & 4771\\
 \hline
 bibtex.php & BibTeX Importieren & 2856\\
+\hline
+design/liman.css & Stylesheet für CSS & 2097\\
 \hline
 include/config.php & Datenbankkonfiguration & 362\\
 \hline
