- Sinnlose Beschreibung für liman.css korrigiert

--- a/trunk/docs/beleg3/systemhandbuch.tex
+++ b/trunk/docs/beleg3/systemhandbuch.tex
@@ -63,7 +63,7 @@ lit.php & Literaturdetails & 4771\\
 \hline
 bibtex.php & BibTeX Importieren & 2856\\
 \hline
-design/liman.css & Stylesheet für CSS & 2097\\
+design/liman.css & Stylesheet für LiMan & 2097\\
 \hline
 include/config.php & Datenbankkonfiguration & 362\\
 \hline
