Kleine Korrekturen Anwenderdokumentation

--- a/trunk/docs/beleg3/anwenderdokumentation.tex
+++ b/trunk/docs/beleg3/anwenderdokumentation.tex
@@ -10,16 +10,18 @@ Werkzeuge "ubersichtlich bereit zu stellen.\\
 Informationen wie Titel, Autor und ISBN werden von 
 Migliedern verfasst und in einer Datenbank abgelegt. Aber 
 damit nicht genug, es ist jedem Mitglied auch m"oglich Kommentare zu 
-verfassen, z.B. wie ihm das Buch gefallen hat oder ob es bei Recherchen "uber gewisse Themen
+verfassen, z. B. wie ihm das Buch gefallen hat oder ob es bei Recherchen "uber gewisse Themen
 hilfreich war oder nicht.\\
 Um einen universellen Zugriff auf die Datenbest"ande der Literaturverwaltung zu gew"ahrleisten, 
 erfolgt der Zugriff "uber dynamisch erzeugte HTML-Seiten, die einfach 
 mit jedem Web-Browser "uber die Web-Adresse aufgerufen werden k"onnen.\\
 Ein weiterer Vorteil, den dynamisch erzeugte HTML-Seiten bieten ist die freie Plattformwahl durch den Nutzer.
+
 \section{Basismaschine und Ressourcenanforderungen}
-Die Literaturverwaltung wird von einem Administrator auf einem Web-Server installiert und konfiguriert, dies erm"oglicht jedem Nutzer einen ortsunab"angigen Zugriff auf die Datenbest"ande.\\
-Es wird lediglich ein Web-Browser wie z.B. Firefox, Opera oder der Internet Explorer ben"otigt.\\
-Die Anforderungen an die Hardware richten sich nach den Anforderungen des benutzten Web-Browsers.\\
+Die Literaturverwaltung wird von einem Administrator auf einem Web-Server installiert und konfiguriert. Dies erm"oglicht jedem Nutzer einen ortsunab"angigen Zugriff auf die Datenbest"ande.\\
+Es wird lediglich ein Web-Browser wie z. B. Firefox, Opera oder der Internet Explorer ben"otigt.\\
+Die Anforderungen an die Hardware richten sich nach den Anforderungen des benutzten Web-Browsers.
+
 \section{Nutzerklassen}
 Es gibt drei Nutzerklassen:
 \begin{enumerate}
@@ -29,13 +31,13 @@ Der Nutzer besitzt keinerlei M"oglichkeiten Datenbest"ande anzulegen, zu ver"and
 
 \item Mitglied:\\
 Das Mitglied ist ein registrierte Nutzer, der sich durch sein Anmelden "uber die grafische Oberfl"ache mit einem LogIn-Namen und einem Passwort als solcher authentifiziert.\\
-Als Mitglied darf man zus"atzlich zu den Rechten eines Nutzers neue Buchtitel anlegen oder bereits bestehende Titel bearbeiten und l"oschen.\\
+Als Mitglied darf man zus"atzlich zu den Rechten eines Nutzers neue Literatur anlegen oder bereits bestehende Titel bearbeiten und l"oschen.\\
 Desweiteren besitzt jedes Mitglied das Recht, Kommentare zu verfassen sowie eigens erstellte Kommentare zu bearbeiten und zu l"oschen.\\
 Was die Mitgliedsdaten betrifft, so darf jedes Mitglied die eigenen Nutzerdaten bearbeiten. Was die Rechte betrifft, so ist eine "Anderung ausschlie"slich durch einen Administrator m"oglich.\\
 
 \item Administrator:\\
 Zun"achst wird durch einen Administrator die Literaturverwaltung auf einem Web-Server installiert und konfiguriert.\\
-Weiterhin ist der Administrator f"ur die Datenverwaltung und inbesondere f"ur die Mitgliedsverwaltung zust"andig, also z.B. f"ur die Pflege der Mitgliedsdaten.\\
+Weiterhin ist der Administrator f"ur die Datenverwaltung und inbesondere f"ur die Mitgliedsverwaltung zust"andig, also z. B. f"ur die Pflege der Mitgliedsdaten.\\
 Was die Rechte eines Administrators betrifft so sind diese allein auf Grund seines Aufgabengebietes unbeschr"ankt, d.h. er kann alle Daten sehen, erstellen, bearbeiten und l"oschen.\\ 
 
 \end{enumerate}
